# tsck-microbots

./: .gitignore  CMakeLists.txt  README.md  microbots-images.Gc  microbots-images.Gci  microbots-images.Txt  microbots-images.gcs  microb~1.gci  path.jpg.docx
4d/: microbots-screen.4DViSi  microbots-screen.4Dg  microbots-screen.4XE  microbots-screen.cfg
4d/images/: gci_offsets.h  generate-images.sh  gradient-bg.xcf  images.gci
4d/microbots-screen.4DWork/: microbots-screen.aux  microbots-screen.err  microbots-screen.lst  microbots-screen.map  microbots-screen.pjt  microbots-screenConst.inc
hardware/MicroBot - connector board/: MicroBot - connector board.kicad_pcb  MicroBot - connector board.kicad_prl  MicroBot - connector board.kicad_pro  MicroBot - connector board.kicad_sch  MicroBot - connector board.kicad_sch-bak  MicroBot - connector board.net  _autosave-MicroBot - connector board.kicad_pcb  fp-info-cache  (+2 more)
images/: collate-digits.sh  digits.xcf  generate.sh  gradient-bg.xcf  images.gci  offsets.h  upload.sh
microbots-arduino/: .Screen.h.swp  .microbots-arduino.ino.swp  Screen.h
software/: README.md
src/: Button.cpp  Button.h  Stage.cpp  Stage.h  Stepper.cpp  Stepper.h  main.cpp
tools/: notes.md
tools/image-encoder/: CMakeLists.txt  main.c  options.c  options.h
tools/image-encoder/src/: image.c  image.h  image.test.c  lily-test.c  lily-test.h  main.c  options.c  options.h  suites.h  tests.c
tools/image-encoder/src/image/: image.c  image.h  image.test.c
tools/image-encoder/src/processing/: proc.c
tools/image-encoder/src/test/: suites.h
(+64 files in other folders)
